// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> checked type should render correctly 1`] = `
<label
  className="flex "
>
  <input
    checked={true}
    className="relative flex border-sierra-night-40 relative inline-block h-6 w-6 appearance-none overflow-hidden rounded-md border-1 bg-white shadow-sm transition-all after:content[''] after:top-0 after:left-0 after:-right-0 after:bottom-0 after:bg-[url('/images/check.svg')] after:bg-no-repeat after:bg-cover after:w-[80%] after:h-[80%] after:m-auto after:rounded-full after:block after:scale-0 after:transition-all checked:bg-ocean-150 checked:after:scale-100"
    disabled={false}
    name="Test"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <span
    className="text-p-2 ml-3 block w-full"
  >
    Test
  </span>
</label>
`;

exports[`<Checkbox /> disabled should render correctly 1`] = `
<label
  className="flex "
>
  <input
    checked={false}
    className="relative flex border-sierra-night-40 relative inline-block h-6 w-6 appearance-none overflow-hidden rounded-md border-1 bg-white shadow-sm transition-all after:content[''] after:top-0 after:left-0 after:-right-0 after:bottom-0 after:bg-[url('/images/check.svg')] after:bg-no-repeat after:bg-cover after:w-[80%] after:h-[80%] after:m-auto after:rounded-full after:block after:scale-0 after:transition-all checked:bg-ocean-150 checked:after:scale-100 checked:bg-sierra-night-40"
    disabled={true}
    name="Test"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <span
    className="text-p-2 ml-3 block w-full"
  >
    Test
  </span>
</label>
`;

exports[`<Checkbox /> should render correctly 1`] = `
<label
  className="flex"
>
  <input
    checked={false}
    className="relative flex border-sierra-night-40 relative inline-block h-6 w-6 appearance-none overflow-hidden rounded-md border-1 bg-white shadow-sm transition-all after:content[''] after:top-0 after:left-0 after:-right-0 after:bottom-0 after:bg-[url('/images/check.svg')] after:bg-no-repeat after:bg-cover after:w-[80%] after:h-[80%] after:m-auto after:rounded-full after:block after:scale-0 after:transition-all checked:bg-ocean-150 checked:after:scale-100"
    disabled={false}
    name="Test"
    onChange={[Function]}
    type="checkbox"
    value="1"
  />
  <span
    className="text-p-2 ml-3 block w-full"
  >
    Test
  </span>
</label>
`;
